--- a/aboutus.html
+++ b/aboutus.html
@@ -6,23 +6,30 @@
   <title>About Us</title>
 
   <!-- bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <!-- css link -->
   <link rel="stylesheet" href="css/style01.css">
 
 
   <!-- javascript -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 
 
   <!-- font awsome -->
   <script src="https://kit.fontawesome.com/ae0c532513.js" crossorigin="anonymous"></script>
 
-<!-- google font -->
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap" rel="stylesheet">
+  <!-- google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap" rel="stylesheet">
 
 
 </head>
@@ -35,13 +42,14 @@
 
   <nav class="navbar fixed-top  navbar-expand-lg navbar-dark bg-dark">
 
-    <a class="navbar-brand" href="#">
+    <a id="logo" class="navbar-brand" href="#">
       <img src="images/logo0.png" width="50" height="50" class="d-inline-block align-top" alt="" loading="lazy">
 
       <span class="logotext"> <span class="text">Techno</span>crats</span>
     </a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -58,14 +66,14 @@
           <a class="nav-link" href="#pricing">Pricing</a>
         </li> -->
         <li class="nav-item">
-            <a class="nav-link" href="mailto:technocrats.tc@gmail.com">Contact</a>
+          <a class="nav-link" href="mailto:technocrats.tc@gmail.com">Contact</a>
           <!-- <a class="nav-link" href="contact.html">Contact</a> -->
         </li>
       </ul>
     </div>
   </nav>
 
-<!-- what we do
+  <!-- what we do
 <h2>What WE do</h2>
 
 
@@ -77,97 +85,95 @@
 
   <!-- what we do  -->
 
-  <div class="wwd">
-    <h2>What WE do</h2>
-    <div class="row">
-      <div class="card-group">
-        <div class="col-lg-6 cards">
-          <div class="card ">
+  <div id="box1">
+    <section id="bx1" class="dark">
+      <img src="./images/logo0.png" alt="">
+      <h1>TECHNOCRATS</h1>
+      <p>We are a group of tech enthusiasts itend to revolutionize and merge the corporate world with the world of
+        Digital Designing and Technology. <br>
+        Creating a world of collaboration rather than competition. <br> "Solution to all your digital problems at one
+        place" </p>
+      <h2>What WE do</h2>
+    </section>
+    <section id="bx2" class="light">
+      <img src="./images/webb.png" alt="">
+      <h4>WEB AND APP DEVELOPMENT:</h4>
+      <p>Get your website and app up and running in a much affordable price starting @ 1500/- only. <br>
+        You dont have to walk trough your journey to digitalization alone. We are here to help you at every step of it.
+      </p>
+    </section>
+    <section id="db" class="dark">
+      <img src="./images/db.png" alt="">
+      <h4>DIGITAL BRANDING:</h4>
+      <p>We are here to help you with all sort of digital promotion and social media account hendling. <br>
+        Take your brand online and reach higher audiance. Showcase your services online in the best way possible.</p>
+    </section>
+    <section id="bx3" class="light">
+      <img src="https://www.ptiacademy.in/assets/front/images/graphic-design.png" alt="">
+      <h4>GRAPHICS DESIGNING:</h4>
+      <p>=> Logo Designing <br>
+        => Poster Designing <br>
+        => Post Designing <br>
+      => Business Card <br>
+      => Banner Designing <br>
+      => Magazine Designing <br>
+      and many more designs at a very affordable prices.
+    </p>
+  </section>
+  <section id="bx4" class="dark">
+    <img src="./images/av.png" alt="">
+    <h4>ADVERTISEMENT VIDEO:</h4>
+    <p>Present your brand with a excellent demonstrative advertisement video. <br>
+      Get your Ad. up and running at your desirable price.
+    </p>
+  </section>
+  </div>
 
-            <div class="card-body">
-              <img class="image"src="images/we&appdev.jpg" alt="">
-            </div>
-          </div>
+
+  <!-- our team carousal -->
+  <div class="team">
+    <h2>Our Team</h2>
+    <p>Meet Team TechnoCrats</p>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/pm.jpg" class="d-block w-100" alt="prakash">
         </div>
-
-        <div class="col-lg-6 cards">
-          <div class="card">
-
-            <div class="card-body">
-<img class="image"src="images/db.jpg" alt="">
-            </div>
-          </div>
+        <div class="carousel-item">
+          <img src="images/nd.jpg" class="d-block w-100" alt="nitish">
         </div>
-
-        <div class="col-lg-6 cards">
-          <div class="card ">
-            <div class="card-body">
-<img class="image"src="images/gd.jpg" alt="">
-            </div>
-          </div>
+        <div class="carousel-item">
+          <img src="./images/hg.jpg" class="d-block w-100" alt="himani">
         </div>
-
-        <div class="col-lg-6 cards">
-          <div class="card ">
-
-            <div class="card-body">
-            <img class="image"src="images/av.jpg" alt="">  </div>
-          </div>
-        </div>
+       
 
       </div>
-    </div>
-  </div>
-
-
-<!-- our team carousal -->
-<div class="team">
-  <h2>Our Team</h2>
-  <p>Meet Team TechnoCrats</p>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/pm.jpg" class="d-block w-100" alt="prakash">
-    </div>
-    <div class="carousel-item">
-      <img src="images/nd.jpg" class="d-block w-100" alt="nitish">
-    </div>
-    <div class="carousel-item">
-      <img src="images/sj.jpg" class="d-block w-100" alt="somya">
-    </div>
-    <div class="carousel-item">
-      <img src="images/rks.jpg" class="d-block w-100" alt="rohit">
-    </div>
-    <div class="carousel-item">
-      <img src="images/ns.jpg" class="d-block w-100" alt="noopur">
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 
 
+    <!-- Footer -->
 
- <!-- Footer -->
+    <footer id="footer">
+      <button type="button" class="btn btn-dark">Follow Us</button>
 
-  <footer id="footer">
-    <button type="button" class="btn btn-dark">Follow Us</button>
+      <div class="footer-icon">
+        <a href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
+        <a href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i
+            class="youtube fab fa-youtube fa-2x"></i></a>
+        <a href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
 
-    <div class="footer-icon">
-      <a href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
-      <a href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
-      <a href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i class="youtube fab fa-youtube fa-2x"></i></a>
-      <a href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
-
-    </div>
+      </div>
       <p class="copy">© Copyright 2020 Technocrats</p>
     </footer>
 
