--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>About Us</title>
 
+
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -23,7 +24,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-
+  <script src="./js/aboutus.js"></script>
 
   <!-- font awsome -->
   <script src="https://kit.fontawesome.com/ae0c532513.js" crossorigin="anonymous"></script>
@@ -96,22 +97,22 @@
       <h2>What WE do</h2>
     </section>
     <section id="bx2" class="light">
-      <img src="./images/webb.png" alt="">
-      <h4>WEB AND APP DEVELOPMENT:</h4>
-      <p>Get your website and app up and running in a much affordable price starting @ 1500/- only. <br>
+      <img  class="bxc2" src="./images/webb.png" alt="">
+      <h4 class="bxc2">WEB AND APP DEVELOPMENT:</h4>
+      <p class="bxc2">Get your website and app up and running in a much affordable price starting @ 1500/- only. <br>
         You dont have to walk trough your journey to digitalization alone. We are here to help you at every step of it.
       </p>
     </section>
     <section id="db" class="dark">
-      <img src="./images/db.png" alt="">
-      <h4>DIGITAL BRANDING:</h4>
-      <p>We are here to help you with all sort of digital promotion and social media account hendling. <br>
+      <img class="bxc3" src="./images/db.png" alt="">
+      <h4 class="bxc3">DIGITAL BRANDING:</h4>
+      <p class="bxc3">We are here to help you with all sort of digital promotion and social media account hendling. <br>
         Take your brand online and reach higher audiance. Showcase your services online in the best way possible.</p>
     </section>
     <section id="bx3" class="light">
-      <img src="https://www.ptiacademy.in/assets/front/images/graphic-design.png" alt="">
-      <h4>GRAPHICS DESIGNING:</h4>
-      <p>=> Logo Designing <br>
+      <img class="bxc4" src="https://www.ptiacademy.in/assets/front/images/graphic-design.png" alt="">
+      <h4 class="bxc4">GRAPHICS DESIGNING:</h4>
+      <p class="bxc4">=> Logo Designing <br>
         => Poster Designing <br>
         => Post Designing <br>
       => Business Card <br>
@@ -121,9 +122,9 @@
     </p>
   </section>
   <section id="bx4" class="dark">
-    <img src="./images/av.png" alt="">
-    <h4>ADVERTISEMENT VIDEO:</h4>
-    <p>Present your brand with a excellent demonstrative advertisement video. <br>
+    <img class="bxc5" src="./images/av.png" alt="">
+    <h4 class="bxc5">ADVERTISEMENT VIDEO:</h4>
+    <p class="bxc5">Present your brand with a excellent demonstrative advertisement video. <br>
       Get your Ad. up and running at your desirable price.
     </p>
   </section>
@@ -167,11 +168,11 @@
       <button type="button" class="btn btn-dark">Follow Us</button>
 
       <div class="footer-icon">
-        <a href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
-        <a href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
-        <a href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i
+        <a  href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
+        <a  href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
+        <a  href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i
             class="youtube fab fa-youtube fa-2x"></i></a>
-        <a href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
+        <a  href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
 
       </div>
       <p class="copy">© Copyright 2020 Technocrats</p>
