--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,7 @@
           <a class="nav-link" href="#pricing">Pricing</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="mailto:technocrats.tc@gmail.com">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
           <!-- <a class="nav-link" href="contact.html">Contact</a> -->
         </li>
       </ul>
