--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="max-width">
         <div class="logo"><a href="portfolio">Techno<span>crates</span></a></div>
         <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="contact.html">Contact</a></li>
             
         </ul>
         <div class="menu-btn">
