--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,7 @@
           <a class="nav-link" href="#pricing">Pricing</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="mailto:technocrats.tc@gmail.com">Contact</a>
           <!-- <a class="nav-link" href="contact.html">Contact</a> -->
         </li>
       </ul>
@@ -97,7 +97,7 @@
       <h2>What WE do</h2>
     </section>
     <section id="bx2" class="light">
-      <img  class="bxc2" src="./images/webb.png" alt="">
+      <img class="bxc2" src="./images/webb.png" alt="">
       <h4 class="bxc2">WEB AND APP DEVELOPMENT:</h4>
       <p class="bxc2">Get your website and app up and running in a much affordable price starting @ 1500/- only. <br>
         You dont have to walk trough your journey to digitalization alone. We are here to help you at every step of it.
@@ -115,19 +115,19 @@
       <p class="bxc4">=> Logo Designing <br>
         => Poster Designing <br>
         => Post Designing <br>
-      => Business Card <br>
-      => Banner Designing <br>
-      => Magazine Designing <br>
-      and many more designs at a very affordable prices.
-    </p>
-  </section>
-  <section id="bx4" class="dark">
-    <img class="bxc5" src="./images/av.png" alt="">
-    <h4 class="bxc5">ADVERTISEMENT VIDEO:</h4>
-    <p class="bxc5">Present your brand with a excellent demonstrative advertisement video. <br>
-      Get your Ad. up and running at your desirable price.
-    </p>
-  </section>
+        => Business Card <br>
+        => Banner Designing <br>
+        => Magazine Designing <br>
+        and many more designs at a very affordable prices.
+      </p>
+    </section>
+    <section id="bx4" class="dark">
+      <img class="bxc5" src="./images/av.png" alt="">
+      <h4 class="bxc5">ADVERTISEMENT VIDEO:</h4>
+      <p class="bxc5">Present your brand with a excellent demonstrative advertisement video. <br>
+        Get your Ad. up and running at your desirable price.
+      </p>
+    </section>
   </div>
 
 
@@ -136,17 +136,25 @@
     <h2>Our Team</h2>
     <p>Meet Team TechnoCrats</p>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
+      <div id="teamflo" class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/pm.jpg" class="d-block w-100" alt="prakash">
+          <img id="imgN" src="images/pm.jpg" class=" d-block w-100" alt="prakash">
+          <button id="floN" type="button" class=" btn btn-light"><a href="https://www.instagram.com/prakashmishra93?r=nametag" >Follow</a></button>
+         
+
+
+
+
         </div>
         <div class="carousel-item">
           <img src="images/nd.jpg" class="d-block w-100" alt="nitish">
+          <button type="button" class="btn btn-light" ><a href="https://www.instagram.com/n.i.t.i.s.h_d.u.b.e.y?r=nametag">Follow</a></button>
         </div>
         <div class="carousel-item">
           <img src="./images/hg.jpg" class="d-block w-100" alt="himani">
+          <button type="button" class="btn btn-light"><a href="https://www.instagram.com/_himanigaikwad_?r=nametag">Follow</a></button>
         </div>
-       
+
 
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -165,14 +173,14 @@
     <!-- Footer -->
 
     <footer id="footer">
-      <button type="button" class="btn btn-dark">Follow Us</button>
+      <button type="button" class="btn btn-light">Follow Us</button>
 
       <div class="footer-icon">
-        <a  href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
-        <a  href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
-        <a  href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i
+        <a href="https://www.instagram.com/techn_ocrats?r=nametag"> <i class="insta fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.facebook.com/Technocrats-111941107240896/"> <i class="fb fab fa-facebook fa-2x"> </i></a>
+        <a href="https://www.youtube.com/channel/UCzXS2ePOq2-UabotiQI6NdQ"> <i
             class="youtube fab fa-youtube fa-2x"></i></a>
-        <a  href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
+        <a href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
 
       </div>
       <p class="copy">© Copyright 2020 Technocrats</p>
