--- a/aboutus.html
+++ b/aboutus.html
@@ -135,37 +135,44 @@
   <div class="team">
     <h2>Our Team</h2>
     <p>Meet Team TechnoCrats</p>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div id="teamflo" class="carousel-inner">
-        <div class="carousel-item active">
-          <img id="imgN" src="images/pm.jpg" class=" d-block w-100" alt="prakash">
-          <button id="floN" type="button" class=" btn btn-light"><a href="https://www.instagram.com/prakashmishra93?r=nametag" >Follow</a></button>
-         
+
+    <div id="teamcr">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="teamflo" class="carousel-inner">
+          <div class="carousel-item active">
+            <img id="imgN" src="images/prakashm.png" class=" d-block w-100" alt="prakash">
+            <button id="floN" type="button" class=" btn btn-light"><a
+                href="https://www.instagram.com/prakashmishra93?r=nametag">Follow</a></button>
 
 
+
+
+
+          </div>
+          <div class="carousel-item">
+            <img src="images/nitishd.png" class="d-block w-100" alt="nitish">
+            <button type="button" class="btn btn-light"><a
+                href="https://www.instagram.com/n.i.t.i.s.h_d.u.b.e.y?r=nametag">Follow</a></button>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/himanig.png" class="d-block w-100" alt="himani">
+            <button type="button" class="btn btn-light"><a
+                href="https://www.instagram.com/_himanigaikwad_?r=nametag">Follow</a></button>
+          </div>
 
 
         </div>
-        <div class="carousel-item">
-          <img src="images/nd.jpg" class="d-block w-100" alt="nitish">
-          <button type="button" class="btn btn-light" ><a href="https://www.instagram.com/n.i.t.i.s.h_d.u.b.e.y?r=nametag">Follow</a></button>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/hg.jpg" class="d-block w-100" alt="himani">
-          <button type="button" class="btn btn-light"><a href="https://www.instagram.com/_himanigaikwad_?r=nametag">Follow</a></button>
-        </div>
-
-
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
+
 
 
 
