--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            <a class="nav-link" href="#pricing">Pricing</a> 
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="https://pacific-brushlands-92371.herokuapp.com/">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
               <!-- <a class="nav-link" href="contact.html">Contact</a> -->
           </li>
         </ul>
@@ -269,7 +269,7 @@
       <a href="https://twitter.com/Technocrats18?s=08"> <i class="twitter fab  fa-twitter fa-2x"></i></a>
 
     </div>
-    <p class="copy">© Copyright 2020 Technocrats</p>
+    <p class="copy">© Copyright 2021 Technocrats</p>
   </footer>
 
 
